--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
             <input type="radio" id="male" name="genderOption" value="male">
             male
         </label> <br>       
-        <label for="age">Age:</label>
-        <input type="number" id="age" ><br>
-        <input type="submit" value="GENERATE" width="10">
+        <label for="age" >Age:</label>
+        <input type="number" id="age" value="30"><br>
+        <input type="submit" id="generate" value="GENERATE" width="10">
     </form>
+    <span id="perCodeText"></span>
     <script src="app.js"></script>
 </body>
 
